<resources>
    <string name="app_name">    Sup Chat</string>
    <string name="userName">Name</string>
    <string name="RegistrationText">Please , Sign Up</string>
    <string name="emailTextView">Email</string>
    <string name="passwordEditText">Password</string>
    <string name="buttonSignUp">Sign Up</string>
    <string name="sup_chat">Sup Chat</string>
    <string name="sign_up">Sign Up</string>
    <string name="username1">UserName</string>
    <string name="logout">Log out</string>
    <string name="log_out">Log out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_boy">Hello Boy</string>
    <string name="messagetextRes">  Type a message . . .</string>
    <string name="text_hello">hello</string>
    <string name="hellooooooo">Hellooooooo</string>
    <string name="sup_bitch">Sup bitch</string>
    <string name="sup_sup">Sup sup</string>
    <string name="user">User</string>
    <string name="profile">Profile</string>
    <string name="profile1">Profile</string>
    <string name="home">Home</string>
    <string name="profile111">Profile</string>
    <string name="settings">Settings</string>

    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
    <string name="offline">offline</string>
    <string name="user_reg_success_msg">User Successfully Registered! Please Enter in your Profile</string>
    <string name="user_reg_failure_msg">Something went wrong. Please use different email address or try later</string>

    <!-- Common -->
    <string name="warning_message_title">Warning!</string>
    <string name="warning_no_internet_message">Your device is not connected to Internet. Please, try later</string>
    <string name="warning_alert_exit_button_title">Exit</string>
    <string name="common_error_message">Some Error Occurred. Please try later.</string>

    <!-- Login Screen -->
    <string name="login_password_hint_text">Password</string>
    <string name="login_email_hint_text">Email</string>
    <string name="login_log_in_button_text">Log In</string>
    <string name="login_forgot_pass_button_title">Forgot your password?</string>
    <string name="login_reset_email">Type in your Email</string>
    <string name="login_title_text">Please , Log in</string>
    <string name="login_field_fill_error_message">All fields must be filled!</string>
    <string name="login_success_enter_to_account_message">Welcome to your Account</string>
    <string name="login_failure_message">Authentication failed. Wrong password or email</string>

    <!-- Registration Screen -->
    <string name="user_registration_email_error_message">Email format is invalid. Please, check it and retry later.</string>
    <string name="user_registration_password_error_message">Password must consist of at least of 8 characters</string>
    <string name="user_registration_failure_message">Please use different email address or try later</string>
    <string name="user_registration_succes_message">User Successfully Registered! Please Enter in your Profile</string>
    <string name="user_registration_user_name_hint_text">Name</string>
    <string name="user_registration_email_hint_text">Email</string>
    <string name="user_registration_pass_hint_text">Password</string>

    <!-- Reset Password Screen -->
    <string name="reset_pass_button_title">Reset Password</string>
    <string name="reset_pass_success_message">Message with instruction was send to your email. Please check it</string>
    <string name="reset_pass_email_regex_error_message">Email format is invalid. Please, check it and retry later</string>
    <string name="reset_pass_info_message">Put your eMail in and press RESET Button. Then check out your email for details</string>

    <!-- Profile Screen -->
    <string name="profile_no_image_selected_error_text">No Image Selected</string>
    <string name="profile_loading_progress_message">Uploading in Progress</string>
    <string name="profile_progress_upload_message">Upload in Progress</string>

    <!-- Conversation Screen -->
    <string name="conversation_screen_empty_message_error_message">You can\'t send an empty Message</string>

</resources>
