<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterAcitivty">

    <include
        layout="@layout/bar_layout"
        android:id="@+id/tbForRegisterActivity"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@+id/tbForRegisterActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRegisterActivity"
            android:text="@string/RegistrationText"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/userName"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/emailTextView"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:hint="@string/passwordEditText"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />


        <Button
            android:id="@+id/butSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSignUp"
            android:textSize="15sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorMyColor"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>


</RelativeLayout>