<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background_color"
    android:orientation="vertical">

    <include layout="@layout/bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/base_padding_20">

        <TextView
            android:id="@+id/tvRegisterActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_8"
            android:text="@string/login_title_text"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_20"
            android:nextFocusDown="@id/tilPassword"
            app:hintTextAppearance="@style/TextInputLayoutHintLabelStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_hint_text"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/hint_text_color"
                android:theme="@style/TextInputEditTextControlStyle" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_20"
            app:hintTextAppearance="@style/TextInputLayoutHintLabelStyle"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint_text"
                android:imeOptions="actionDone"
                android:textColor="@color/colorWhite"
                android:inputType="textPassword"
                android:textColorHint="@color/hint_text_color"
                android:theme="@style/TextInputEditTextControlStyle" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/butLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_24"
            android:background="@drawable/backgronud_gray_background_rounded_eighteen"
            android:enabled="false"
            android:text="@string/login_log_in_button_text"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tvResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/base_margin_16"
            android:text="@string/login_forgot_pass_button_title"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

</LinearLayout>