<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background_color">

    <include layout="@layout/bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tbForRegisterActivity"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvRegisterActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/RegistrationText"
            android:textColor="@color/colorWhite"
            android:textSize="28sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintTextAppearance="@style/TextInputLayoutHintLabelStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_registration_user_name_hint_text"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColorHint="@color/hint_text_color"
                android:theme="@style/TextInputEditTextControlStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintTextAppearance="@style/TextInputLayoutHintLabelStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_registration_email_hint_text"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="@color/hint_text_color"
                android:theme="@style/TextInputEditTextControlStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:passwordToggleEnabled="true"
            app:hintTextAppearance="@style/TextInputLayoutHintLabelStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_registration_pass_hint_text"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:textColorHint="@color/hint_text_color"
                android:theme="@style/TextInputEditTextControlStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/butSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/backgronud_gray_background_rounded_eighteen"
            android:enabled="false"
            android:text="@string/buttonSignUp"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/cpv_registration"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>