<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background_color"
    android:orientation="vertical">

    <include layout="@layout/bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/base_padding_16">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_20"
            android:nextFocusDown="@id/tilPassword"
            app:hintTextAppearance="@style/TextInputLayoutHintLabelStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_reset_email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/hint_text_color"
                android:theme="@style/TextInputEditTextControlStyle" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_20">

            <Button
                android:id="@+id/butReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/backgronud_gray_background_rounded_eighteen"
                android:enabled="false"
                android:text="@string/reset_pass_button_title"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/resetButtonProgress"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/grayCCCCCC"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_16"
            android:gravity="center"
            android:text="@string/reset_pass_info_message"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>